Updated Nuget packages

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /MySharePointApp/MySharePointAppWeb/obj/Debug
 /MySharePointApp/packages
 /MySharePointApp/_ReSharper.Caches/ReSharperPlatformVs15183_df77351a.MySharePointApp.00
+*.user
