--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /MySharePointApp/packages
 /MySharePointApp/_ReSharper.Caches/ReSharperPlatformVs15183_df77351a.MySharePointApp.00
 *.user
+/MySharePointApp/_ReSharper.Caches/ReSharperPlatformVs16192_edb60457.MySharePointApp.00
