--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,13 @@
 /MySharePointApp/_ReSharper.Caches/ReSharperPlatformVs15183_df77351a.MySharePointApp.00
 *.user
 /MySharePointApp/_ReSharper.Caches/ReSharperPlatformVs16192_edb60457.MySharePointApp.00
+/MySharePointAddin2021/.vs
+/MySharePointAddin2021/MySharePointAddin2021/bin
+/MySharePointAddin2021/MySharePointAddin2021/obj
+/MySharePointAddin2021/MySharePointAddin2021/pkgobj
+/MySharePointAddin2021/MySharePointAddin2021Web/bin
+/MySharePointAddin2021/MySharePointAddin2021Web/obj
+/MySharePointAddin2021/packages
+/MySharePointAddin2021/_ReSharper.Caches/ReSharperPlatformVs15183_df77351a.MySharePointApp.00
+*.user
+/MySharePointAddin2021/_ReSharper.Caches/ReSharperPlatformVs16192_edb60457.MySharePointApp.00
