--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 /MySharePointAddin2021/_ReSharper.Caches/ReSharperPlatformVs15183_df77351a.MySharePointApp.00
 *.user
 /MySharePointAddin2021/_ReSharper.Caches/ReSharperPlatformVs16192_edb60457.MySharePointApp.00
+*.pubxml
