--- a/MySharePointApp/MySharePointAppWeb/packages.config
+++ b/MySharePointApp/MySharePointAppWeb/packages.config
@@ -4,8 +4,8 @@
   <package id="AppForSharePointOnlineWebToolkit" version="3.1.5" targetFramework="net452" />
   <package id="AppForSharePointWebToolkit" version="3.1.5" targetFramework="net452" />
   <package id="bootstrap" version="3.4.1" targetFramework="net45" />
-  <package id="jQuery" version="1.10.2" targetFramework="net45" />
-  <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
+  <package id="jQuery" version="3.6.0" targetFramework="net472" />
+  <package id="jQuery.Validation" version="1.19.3" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
@@ -13,19 +13,21 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net452" />
   <package id="Microsoft.Azure.ActiveDirectory.GraphClient" version="2.1.1" targetFramework="net452" />
-  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net45" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="3.0.5" targetFramework="net472" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net472" />
   <package id="Microsoft.Data.Edm" version="5.8.4" targetFramework="net452" />
   <package id="Microsoft.Data.OData" version="5.8.4" targetFramework="net452" />
   <package id="Microsoft.Data.Services.Client" version="5.8.4" targetFramework="net452" />
-  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net45" />
-  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net45" developmentDependency="true" />
-  <package id="Microsoft.SharePointOnline.CSOM" version="16.1.8613.1200" targetFramework="net452" />
+  <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.12" targetFramework="net472" />
+  <package id="Microsoft.Net.Compilers" version="3.9.0" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.Rest.ClientRuntime" version="2.3.23" targetFramework="net472" />
+  <package id="Microsoft.Rest.ClientRuntime.Azure" version="3.3.19" targetFramework="net472" />
+  <package id="Microsoft.SharePointOnline.CSOM" version="16.1.21312.12000" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Modernizr" version="2.6.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
-  <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="Modernizr" version="2.8.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="Respond" version="1.4.2" targetFramework="net472" />
   <package id="System.Spatial" version="5.8.4" targetFramework="net452" />
-  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
-  <package id="WindowsAzure.Storage" version="6.2.0" targetFramework="net45" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net472" />
+  <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net472" />
 </packages>
